tests/baselines/reference/duplicateIdentifierRelatedSpans_moduleAugmentation.errors.txt
/dir/a.ts(1,14): error TS2451: Cannot redeclare block-scoped variable 'x'.
/dir/b.ts(4,18): error TS2451: Cannot redeclare block-scoped variable 'x'.
/dir/b.ts(8,18): error TS2451: Cannot redeclare block-scoped variable 'x'.


==== /dir/a.ts (1 errors) ====
    export const x = 0;
                 ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
!!! related TS6203 /dir/b.ts:4:18: 'x' was also declared here.
!!! related TS6204 /dir/b.ts:8:18: and here.
    
==== /dir/b.ts (2 errors) ====
    export {};
    
    declare module "./a" {
        export const x = 0;
                     ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
!!! related TS6203 /dir/a.ts:1:14: 'x' was also declared here.
    }
    
    declare module "../dir/a" {
        export const x = 0;
                     ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
!!! related TS6203 /dir/a.ts:1:14: 'x' was also declared here.
    }
    